# simple-agentic-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  litellm-config.yaml  local_workflow.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/agent/: __init__.py  graph.py  prompts.py  state.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py  guardrails.py  logging.py
app/rag/: __init__.py  chunker.py  embeddings.py  loader.py  retriever.py  vectorstore.py
app/schemas/: chat.py
data/: aml_policy.md  cached_agent_workflow.md  fraudshield_overview.md  model_monitoring.md
evals/: __init__.py  evaluate_ragas.py  golden_dataset.json
reports/: ragas_report.json
scripts/: __init__.py  ingest.py
storage/chroma/: chroma.sqlite3
tests/: test_chunker.py  test_guardrails.py  test_loader.py
