[project]
name = "simple-agentic-rag"
version = "0.1.0"
description = "its a simple agentic rag using langgraph, chroma db, fastapi, ragas evaluation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]

test = [
    "pytest>=9.0.3",
]

eval = [
    "ragas==0.4.3",
    "datasets>=5.0.0",
    "langchain-community==0.3.31",
]

[tool.uv]
package = false
